--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
         "php": ">=5.3"
     },
     "autoload": {
-        "psr-4": { "Pushin\\Bitrix\\ModuleAutoloader": "src" }
+        "psr-4": { "Pushin\\Bitrix\\ModuleAutoloader\\": "src" }
     }
 }
